Closed Bug 386070 Opened 18 years ago Closed 18 years ago

http referer field not set for submission

Categories

(Core Graveyard :: XForms, defect)

1.8 Branch
x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: aaronr, Assigned: aaronr)

References

Details

(Keywords: fixed1.8.1.5)

Attachments

(2 files)

1.54 KB, application/xhtml+xml
Details
2.34 KB, patch
smaug
: review+
doronr
: review+
Details | Diff | Splinter Review
A user brought up the idea that we should set the referer field in the http header when we do our xml submissions. Talking to mkaply, it is common for HTML forms to set the referer field when those forms are submitted. So we should probably do the same.
Attached file testcase
Clicking on the submit button should send you to xformstest.org's echo service. There should be a value echoed for HTTP_REFERER.
Assignee: nobody → aaronr
Status: NEW → ASSIGNED
Attached patch patchSplinter Review
Attachment #270093 - Flags: review?(Olli.Pettay)
Attachment #270093 - Flags: review?(doronr)
Blocks: 376307
Attachment #270093 - Flags: review?(Olli.Pettay) → review+
Attachment #270093 - Flags: review?(doronr) → review+
fixed in trunk and 1.8 branch
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.5
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: