[XForms] http referer field not set for xforms submissions. Bug 386070, r=doronr+olli